<resources>
    <string name="app_name">SafeTravels</string>

    <string name="step_one">STEP 1: Choose a person.</string>
    <string name="step_two">STEP 2: Select how often.</string>
    <string name="step_three">STEP 3: Start sending updates!</string>

    <string name="interval_prompt">Select Time Between Updates</string>
    <string name="contact_prompt">Enter Contact Name</string>

    <string name="five_min_radio">5 Minutes</string>
    <string name="ten_min_radio">10 Minutes</string>
    <string name="twenty_min_radio">20 Minute</string>
    <string name="thirty_min_radio">30 Minutes</string>
    <string name="one_hour_radio">1 Hour</string>
    <string name="two_hour_radio">2 Hours</string>

    <string name="start_button">START</string>

    <string name="running_text">Your contact will be updated!</string>
    <string name="stopped_text">Click START AGAIN to update a new contact.</string>

    <string name="stop_button">STOP</string>
    <string name="startAgain_button">START AGAIN</string>

    <string name="notification_message">Sending an update!</string>

</resources>
