<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/mainView"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_weight="50"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_all_margin"/>

    <TextView
        android:id="@+id/running_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:textSize="20sp"
        android:text="@string/running_text"
        android:textColor="@color/textGray"
        android:gravity="center"
        android:background="@color/step_prompt"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textIsSelectable="false">
    </TextView>

    <Button
        android:id="@+id/startAgainButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/goGreen"
        android:clickable="true"
        android:text="@string/startAgain_button"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_all_margin">
    </Button>

    <Button
        android:id="@+id/stopButton"
        android:clickable="true"
        android:text="@string/stop_button"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/stopRed"
        android:layout_margin="@dimen/activity_all_margin">
    </Button>

</LinearLayout>
